2007-04-17  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: use an actual floating point number instead of an
	integer for testing long double I/O.

2007-01-09  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h (M_PI_4): corrected typo in higher digits of M_PI_4
	(at ~1e-20)

2006-11-02  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h templates_off.h: added UNSIGNED definition for
	detecting types without negative values

2006-02-15  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: restrict darwin IEEE detection to powerpc, because
	new x86 macs are different.

	* removed automatic addition of compilation flags on alpha,
	these should be specified on the command-line through CFLAGS.

2006-01-07  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h: added an FP=1 definition for the floating point
	types, FP is undefined for integer types.

2005-08-05  Brian Gough  <bjg@network-theory.co.uk>

	* gsl/Makefile.am: need to remove makefile with later versions of
	automake

2005-04-05  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: added ieeefp.h test for solaris

2005-01-13  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: added case for 86_64 in IEEE arithmetic interface
	detection

2004-10-26  Brian Gough  <bjg@network-theory.co.uk>

	* test_gsl_histogram.sh: trim \r from test output for
	compatibility with Cygwin.

2004-07-29  Brian Gough  <bjg@network-theory.co.uk>

	* modified all makefiles to use TESTS=$(check_programs)
	to get correct EXEEXT behavior

2004-07-23  Brian Gough  <bjg@network-theory.co.uk>

	* added wavelet/ directory

2004-05-28  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: ran configure script through Autoconf's autoupdate
	to use latest macro names

2004-05-17  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.m4: fix m4 quoting of first argument to AC_DEFUN

2004-03-17  Brian Gough  <bjg@network-theory.co.uk>

	* gsl/Makefile.am (header-links): use test -r instead of test -e